# Sample_grandpa_integration

./: .gitignore  README.md  SERVER_FLOW_README.md  m2_safrole_demo.py  main.py  requirements.txt  run_safrole.py  setup.py  test_server_flow.py  update_state.py
Grandpa/: gen_keys.py  grandpa_prod.py  grandpa_sim.py  keys.json  nodes_config.json  start_nodes.sh
Jam-history/: README.md  __init__.py  history_stf.py  jam_types.py  normalize.py  state_utils.py  test.py  test_state_utils.py
Jam-history/results/: latest_result.json  progress_blocks_history-1.json  progress_blocks_history-2.json  progress_blocks_history-3.json  progress_blocks_history-4.json
Jam-preimages/: README.md  main.py  process_updated_state.py  requirements.txt  test_integration.py
Jam-preimages/results/: latest_result.json
Jam-preimages/src/: index.py  state_manager.py
Jam-preimages/test_results/: preimage_test_results_003.json  preimage_test_results_009.json
Reports-Python/: README.md
Reports-Python/scripts/: run_jam_vectors.py
accumulate/: accumulate_component.py  accumulate_output.json  actual.json  debug_single.py  expected.json  test_accumulate.py  validate.py
assurances/: assurances_component.py  post_state.json
assurances/full/: assurance_for_not_engaged_core-1.json  assurance_with_bad_attestation_parent-1.json  assurances_with_bad_signature-1.json  assurances_with_bad_validator_index-1.json  assurers_not_sorted_or_unique-1.json  assurers_not_sorted_or_unique-2.json
authorizations/: full_cycle_test.py  importer.py  state.json
bandersnatch-vrf-spec/: specification.md  specification.tex
bandersnatch-vrf-spec/assets/example/: Cargo.toml
bandersnatch-vrf-spec/assets/example/src/: lib.rs  main.rs
config/: config.yaml
examples/: basic_usage.py
jam_pvm/: .gitignore  Cargo.toml
jam_pvm/src/: authorizer.rs  lib.rs  main.rs  service.rs  types.rs
server/: README.md  __init__.py  auth_integration.py  auth_payload.json  block_produced.json  client_example.py  compute_merkle_root.py  gen_sign.py  generate_test_payload.py  output_state.json  requirements.txt  safrole_integration.py  sample_data.json  server.py  start_server.sh  test_auth.py  test_auth_with_payload.py  test_complete_integration.py  test_ed25519_auth.py  test_server.py  test_signature.py  updated_state.json  updated_state1.json
src/jam/: __init__.py
tests/: __init__.py  test_pvm_integration.py  test_runner.py
(+41 files in other folders)
