[package]
name = "jam_pvm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable std by default for the binary; the library remains no_std when the
# "std" feature is disabled.
default = ["std"]
std = []

[dependencies]
# JAM PVM essentials
jam-pvm-common = { version = "0.1.21", features = ["service", "authorizer", "logging"] }
jam-types = "0.1.21"
polkavm-derive = "0.19.0"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Serialization
jam-codec = { version = "0.1.0", features = ["derive"] }

# Cryptography (for hashing and signatures)
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.1", features = ["rand_core"], default-features = false }

# `no_std` compatibility fix for randomness
getrandom = { version = "0.2", default-features = false, features = ["custom"] }

# Backend server deps (std-only)
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parity-scale-codec = { version = "3", features = ["derive"] }

[[bin]]
name = "server"
path = "src/main.rs"